--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="hu">
 <head>
+    <style>
+        body {background-color: powderblue;}
+    </style>
 <meta charset="utf-8">
 <title>Nagy Béla</title>
 </head>
 <body>
-    <h1>Regisztráció</h1>
+    <h1 align="center">Regisztráció</h1>
     <p>Kérlek légyszí töltse ki ez a Űrlapot</p>
 </body>
 </html>
@@ -21,7 +24,4 @@
     felhasználó azonosító:
     <input type="number" name="user-id" value="12345"><br></br>
 
-video:
-<iframe width="560" height="315" src="https://www.youtube.com/embed/P46ZE0r0vW8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-</form>
 </html>
